# HNEP

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MANIFEST.in  README.md  RELEASE_NOTES_v0.1.0.md  RELEASE_NOTES_v0.2.0.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: v0.3.0_esol_sanity_check.md  v0.3.0_locked_results.json  v0.3.0_locked_results.md  v0.3.0_methodology_notes.md
docs_hnep/: Makefile  api.rst  concepts.rst  conf.py  index.rst  quickstart.rst  tutorial.rst
hnep/: __init__.py  api.py  card.py  cli.py  explain.py  exports.py  thresholds.py  thresholds_calibration.json
hnep/adapters/: __init__.py  base.py  functional.py  jax_flax.py  precomputed.py  pytorch.py
hnep/benchmarks/: __init__.py  ground_truth.py
hnep/classifiers/: __init__.py  qct.py
hnep/cost_utility/: __init__.py  hardware_cost.py  pareto.py  qus.py
hnep/datasets/: __init__.py
hnep/diagnostics/: __init__.py
hnep/examples/: 00_quickstart.py  01_functional_adapter.py  02_precomputed_adapter.py  03_visualizations.py  04_compare_models.py  05_custom_probe.py  __init__.py  quickstart_helpers.py
hnep/gallery/: __init__.py  molecular.py
hnep/probes/: __init__.py  base.py  error_diversity.py  intervention.py  noise.py  representation.py  surrogation.py  temporal.py
hnep/reports/: __init__.py  html.py
hnep/results/: __init__.py  hnep_result.py  probe_result.py
hnep/utils/: __init__.py  bootstrap.py  reproducibility.py  serialise.py
hnep/visualizations/: __init__.py  activation_atlas.py  disagreement_heatmap.py  pareto.py  qct_plane.py  radar.py
scripts/: locked_v030_results.py  recalibrate_thresholds.py  sanity_check_esol.py
tests/: test_adapters.py  test_adversarial_convergent.py  test_benchmarks.py  test_block_bootstrap.py  test_classical_model.py  test_convergent_validity.py  test_data_loaders.py  test_day2_probes.py  test_day3_viz.py  test_day4_gallery.py  test_day6_card_cli.py  test_day7_exports_explain.py  test_diagnostic_scope.py  test_error_diversity_diagnostic.py  test_models.py  test_noise_probe.py  test_permutation_pvalues.py  test_phase3.py  test_probes.py  test_quantum_circuits.py  test_smoke.py  test_temporal_probe.py  test_thresholds_calibration.py  test_training.py  test_v02_surface.py
