[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hnep"
version = "0.4.0"
description = "Hybrid Network Evaluation Protocol — multi-method evaluation for hybrid quantum-classical models"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Pratik Priyanshu", email = "priyanshupriyam123vv@gmail.com" },
]
keywords = [
  "quantum machine learning",
  "evaluation",
  "QML",
  "hybrid models",
  "benchmarking",
  "surrogation",
  "intervention",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Physics",
]

# Core dependencies — kept lightweight so the install is fast for everyone.
# Framework-specific deps live behind extras below.
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "scikit-learn>=1.3",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "pyyaml>=6.0",
  "tqdm>=4.65",
]

[project.optional-dependencies]
# Per-backend extras
jax      = ["jax>=0.4.0", "flax>=0.8.0", "optax>=0.2.0"]
pytorch  = ["torch>=2.0"]
qiskit   = ["qiskit>=1.0"]
pennylane = ["pennylane>=0.35"]

# Optional helpers
molecular = ["rdkit"]
reports   = ["jinja2>=3.1", "plotly>=5.18"]

# Combo for users who want everything (without GPU/CUDA bits)
all = [
  "jax>=0.4.0", "flax>=0.8.0", "optax>=0.2.0",
  "torch>=2.0",
  "pennylane>=0.35",
  "rdkit",
  "jinja2>=3.1", "plotly>=5.18",
]

dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "ruff>=0.5",
  "mypy>=1.5",
  "build>=1.0",
  "twine>=4.0",
]

[project.urls]
Homepage      = "https://github.com/Pratik25priyanshu20/HNEP"
Documentation = "https://github.com/Pratik25priyanshu20/HNEP"
Source        = "https://github.com/Pratik25priyanshu20/HNEP"
Issues        = "https://github.com/Pratik25priyanshu20/HNEP/issues"

[project.scripts]
hnep = "hnep.cli:main"

# ─── Tool configuration ─────────────────────────────────────────────

[tool.setuptools.packages.find]
where = ["."]
include = ["hnep*"]
exclude = ["tests*", "src*", "scripts*", "notebooks*", "experiments*",
           "docs*", "data*", "config*", "deployment*", "api*", "reports*"]

[tool.setuptools.package-data]
hnep = ["py.typed", "thresholds_calibration.json"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
# The five ignored modules are pre-v0.1 cruft that import from a parent-project
# `src.*` package no longer carried in this standalone repo; they fail to
# collect in a clean PYTHONPATH and were never part of the hnep test suite.
addopts = "-q --ignore=tests/test_quantum_circuits.py --ignore=tests/test_models.py --ignore=tests/test_classical_model.py --ignore=tests/test_data_loaders.py --ignore=tests/test_training.py"
